--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,7 @@ img {
 
 .header {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .container-header {
@@ -60,6 +61,7 @@ img {
     align-items: center;
 }
 .header-nav {
+    position: relative;
     display:flex;
     flex-direction: row;
     margin-right: 332px;
@@ -134,12 +136,14 @@ span {
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.02em;
-    color: #2e2f42;    
+    color: #2e2f42;
+    position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);    
 }
 
-.accent {
-    position:relative;
-}
+/* .accent {
+    position:relative; */
+/* } */
 .menu-item-accent {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
@@ -155,7 +159,7 @@ span {
 
 .menu-item-accent::after {
     position:absolute;
-    bottom: -51px;
+    bottom: -1px;
     display: flex;
     gap: 20px;
     content: "";
@@ -192,6 +196,9 @@ address {
     text-decoration: underline;
 }
 
+.contacts-list-item {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
 .section-solution {
     background-image: linear-gradient(
         to bottom,
@@ -199,6 +206,8 @@ address {
         rgba(46, 47, 66, 0.7))
         , url(../images/hero_image.jpg);
     background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     padding: 188px 0;
     margin: 0 auto;
     display: flex;
@@ -210,7 +219,7 @@ address {
     letter-spacing: 0.02em;
     text-align: center;
     color: #fff;
-    width: 1158px;
+    max-width: 1440px;
 }
 
 .solution {
@@ -243,6 +252,7 @@ address {
     letter-spacing: 0.04em;
     color: #fff; 
     cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
 .service:hover {
@@ -395,7 +405,7 @@ address {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 16px;
+    gap: 24px;
     padding-bottom: 32px;
 }
 
@@ -407,9 +417,17 @@ address {
     background-color: #4d5ae5;
     width: 40px;
     height: 40px;
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+}
+
+.our-team-link:hover,
+.our-team-link:focus {
+    background-color: #404BBF;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .our-team-icon {
-    fill: #fff;
+    fill: #f4f4fd;
     stroke: #4d5ae5;
     /* viewBox="0 0 40 40"; */
     /* border-radius: 100%; */
@@ -445,6 +463,7 @@ address {
 }
 .portfolio-list-item {
     width: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list-item:hover {
@@ -454,6 +473,28 @@ address {
 .portfolio-foto {
     justify-content: center;
     align-items: center;
+}
+.portfolio-wraper {
+    position: relative;
+    overflow: hidden;
+}
+.portfolio-wraper:hover {
+    transform: translateY(0%); 
+}
+
+.portfolio-wraper-paragraf {
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    transform: translateY(100%);
+    height: 100%;
+    width: 100%;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-title-list {
     font-family: "Roboto", sans-serif;
@@ -488,9 +529,18 @@ address {
 }
 
 .footer-container {
-    align-items: flex-start;
+    display: flex;
+    align-items: baseline;
     flex-direction: column;
     gap: 16px;
+}
+
+.footer-logo-wraper {
+    margin-right: 120px;
+}
+
+.footer-socials {
+
 }
 
 .footer-list {
@@ -505,10 +555,41 @@ address {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
-    line-height: 150%;
+    line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #fff;
+    color: #FFFFFF;
     margin-bottom: 16px;
+}
+
+.footer-social-list {
+    display: flex;
+    gap:16px;
+    
+}
+
+.footer-socials-item {
+    width: 40px;
+    height: 40px;
+    /* background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+}
+
+/* .footer-socials-item:hover,
+.footer-socials-item:focus {
+    background-color: #31d0aa;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+/* } */
+.footer-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.footer-link:hover,
+.footer-link:focus {
+    background-color: #31d0aa;
 }
 .footer-text {
     font-family: "Roboto", sans-serif;
