--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,9 @@ img {
     padding: 24px 0;
 }
 
+.menu-first {
+    position: relative;
+}
 .logo {
     display: flex;
     align-items: center;
@@ -138,7 +141,8 @@ span {
     letter-spacing: 0.02em;
     color: #2e2f42;
     position: relative;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);    
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 24px 0;    
 }
 
 /* .accent {
@@ -151,6 +155,7 @@ span {
     line-height: 150%;
     letter-spacing: 0.02em;
     color: #404bbf;   
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .menu-item:hover {
     color: #404bbf;
@@ -186,6 +191,7 @@ address {
     line-height: 150%;
     letter-spacing: 0.02em;
     color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-info:hover {
     color: #404bbf;
