--- a/css/styles.css
+++ b/css/styles.css
@@ -69,9 +69,9 @@ img {
    
 }
 
-.menu-item {
+/* .menu-item {
     padding: 24px 0;
-}
+} */
 
 .menu-first {
     position: relative;
@@ -83,8 +83,6 @@ img {
     padding-bottom: 25.5px;
     margin-left: 0;
     margin-right: 76px;
-    margin-top: 25.5px;
-    margin-bottom: 25.5px;
     font-weight: 700;
     font-size: 18px;
     line-height: 117%;
@@ -169,7 +167,7 @@ span {
     gap: 20px;
     content: "";
     border-radius: 2px;
-    width: 48px;
+    width: 100%;
     height: 4px;
     background-color: #404bbf;
     /* margin-top: 4px; */
@@ -474,6 +472,7 @@ address {
 
 .portfolio-list-item:hover {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    transform: translateY(0%);
     /* border-radius: 4px; */
 }
 .portfolio-foto {
@@ -502,6 +501,12 @@ address {
     width: 100%;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+/* .portfolio-wraper-paragraf:hover,
+.portfolio-wraper-paragraf:focus {
+    transform: translateY(0%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+} */
 .portfolio-title-list {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
@@ -592,6 +597,7 @@ address {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-link:hover,
 .footer-link:focus {
