--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,7 @@ img {
 
 .menu-first {
     position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .logo {
     display: flex;
@@ -154,6 +155,7 @@ span {
     letter-spacing: 0.02em;
     color: #404bbf;   
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    position: relative;
 }
 .menu-item:hover {
     color: #404bbf;
@@ -502,6 +504,9 @@ address {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.portfolio-wraper:hover .portfolio-wraper-paragraf {
+    transform: translateY(0%);
+  }
 /* .portfolio-wraper-paragraf:hover,
 .portfolio-wraper-paragraf:focus {
     transform: translateY(0%);
